--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
   <h1>ミームコイン自動スクリーニング（ETH）— 厳密モード＋カレンダー期間</h1>
 
   <div class="row">
-    <div class="ctl"><label>days（急騰検出の直近日数）</label><input id="days" type="number" value="14" min="7" max="60"></div>
-    <div class="ctl"><label>mult（ピーク/直前minの倍率）</label><input id="mult" type="number" value="3" min="1.01" step="0.01"></div>
+    <div class="ctl"><label>days（急騰検出の直近日数）</label><input id="days" type="number" value="14" min="2" max="60"></div>
+    <div class="ctl"><label>mult（ピーク/直前minの倍率）</label><input id="mult" type="number" value="3" min="1.001" step="0.001"></div>
     <div class="ctl"><label>LP% しきい値（burn/locker合算）</label><input id="lpmin" type="number" value="80" min="0" max="100"></div>
     <div class="ctl"><label>Trending 種（上限）</label><input id="seedLimit" type="number" value="20" min="5" max="100"></div>
     <div class="ctl"><label>厳密モード</label><div><input id="strict" type="checkbox" checked> <span class="pill">days×mult と LP% フィルタを適用</span></div></div>
     <div class="ctl"><label>LP%必須</label><div><input id="lpRequired" type="checkbox" checked> <span class="pill">LP%が取れない行は除外</span></div></div>
     <div class="ctl"><label>LP取得は倍率通過後のみ</label><div><input id="lpAfterMult" type="checkbox" checked> <span class="pill">mult未達はEthplorerを呼ばない</span></div></div>
+    <div class="ctl"><label>表示</label><div><input id="showAll" type="checkbox" checked> <span class="pill">全件表示（しきい値未達も出す）</span></div></div>
   </div>
 
   <div class="row" style="margin-top:8px">
@@ -89,51 +90,77 @@
 </main>
 
 <script>
-/* ---------- Utils ---------- */
+/* ==== Utils ==== */
 const by=id=>document.getElementById(id);
 const sleep=ms=>new Promise(r=>setTimeout(r,ms));
 const ts2=t=>new Date(t*1000).toLocaleString();
-const fmt=x=>x==null||Number.isNaN(+x)?'':(+x).toFixed(2);
+const fmt=x=>x==null||Number.isNaN(+x)?'':(+x).toFixed(3);
 const jitter=(a=120,b=420)=>Math.floor(Math.random()*(b-a+1))+a;
+const normTs=t=> (t>1e12?Math.floor(t/1000):t);
 function log(m,e=false){const L=by('notes');const line=`[${new Date().toLocaleTimeString()}] ${m}`;L.innerHTML+=e?`<div class="err">${line}</div>`:`<div>${line}</div>`;L.scrollTop=L.scrollHeight;}
 function setBar(f){by('pbar').style.width=`${Math.max(0,Math.min(1,f))*100}%`;}
 
-/* 秒/ミリ秒の自動正規化 */
-const normTs = t => (t>1e12?Math.floor(t/1000):t);
-
-/* ---------- Fetch helper（CORS ルーティング） ---------- */
+/* ==== Fetch helper（CORS ルーティング） ==== */
 function buildProxiedUrl(base,url){if(!base)return url;const b=base.trim();if(/\{url\}/i.test(b))return b.replace(/\{url\}/ig,encodeURIComponent(url));if(/[\?&]url=$/i.test(b)||(/\?$/.test(b)&&/url=/.test(b)))return b+encodeURIComponent(url);if(/[\?&]url=\/$/.test(b))return b.replace(/\/$/,'')+encodeURIComponent(url);return b.replace(/\/+$/,'')+'/'+url;}
 async function _fetchJson(u,{timeout=12000,label=''}={}){const ac=new AbortController();const tid=setTimeout(()=>ac.abort('timeout'),timeout);try{if(label)log(`GET ${label}: ${u.slice(0,140)}`);const r=await fetch(u,{signal:ac.signal});if(!r.ok)throw new Error(`HTTP ${r.status}`);const ct=(r.headers.get('content-type')||'').toLowerCase();const body=ct.includes('application/json')?await r.json():JSON.parse(await r.text());clearTimeout(tid);return body;}catch(e){clearTimeout(tid);throw e;}}
-async function getJsonSmart(url,{label='',timeout=12000}={}){const h=new URL(url).hostname;const user=by('cors').value.trim();let bases;if(h.includes('geckoterminal.com')||h.includes('dexscreener.com'))bases=['','https://cors.isomorphic-git.org/'];else if(h.includes('ethplorer.io'))bases=[user||'','https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];else bases=['','https://cors.isomorphic-git.org/'];let last;for(const b of bases){const u=buildProxiedUrl(b,url);try{return await _fetchJson(u,{timeout,label});}catch(e){last=e;log(`…via ${b||'DIRECT'} failed: ${e.message||e}`,true);}}throw last;}
+async function getJsonSmart(url,{label='',timeout=12000}={}){const h=new URL(url).hostname;const user=by('cors').value.trim();
+  let bases;
+  if(h.includes('geckoterminal.com')||h.includes('dexscreener.com'))bases=['','https://cors.isomorphic-git.org/'];
+  else if(h.includes('ethplorer.io'))bases=[user||'','https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];
+  else bases=['','https://cors.isomorphic-git.org/'];
+  let last;
+  for(const b of bases){const u=buildProxiedUrl(b,url);try{return await _fetchJson(u,{timeout,label});}
+    catch(e){last=e;log(`…via ${b||'DIRECT'} failed: ${e.message||e}`,true);} }
+  throw last;
+}
 
-/* ---------- CSV ---------- */
+/* ==== CSV ==== */
 function toCSV(rows){const esc=v=>v==null?'':/[",\n]/.test(String(v))?`"${String(v).replace(/"/g,'""')}"`:String(v);const head=Object.keys(rows[0]||{});const out=[head.map(esc).join(',')];for(const r of rows)out.push(head.map(k=>esc(r[k])).join(','));return out.join('\n');}
 function dl(name,text){const blob=new Blob([text],{type:'text/csv'});const a=document.createElement('a');a.href=URL.createObjectURL(blob);a.download=name;a.click();URL.revokeObjectURL(a.href);}
 
-/* ---------- 時刻 ---------- */
+/* ==== 時刻 ==== */
 function dateToStartUnix(s){if(!s)return null;const d=new Date(s+'T00:00:00');return Math.floor(d.getTime()/1000);}
 function dateToEndUnix(s){if(!s)return null;const d=new Date(s+'T23:59:59');return Math.floor(d.getTime()/1000)+1;}
 function datePrefToUnix(){let s=dateToStartUnix(by('dateStart').value);let e=dateToEndUnix(by('dateEnd').value);if(by('startTs').value)s=+by('startTs').value;if(by('endTs').value)e=+by('endTs').value;return {startTs:s,endTs:e};}
 
-/* ---------- レート制御 ---------- */
+/* ==== レート制御 ==== */
 let lastEth=0,lastGecko=0,geckoPenalty=0;
 const ETHPLORER_MIN_INTERVAL=2800; let GECKO_MIN_INTERVAL=700;
 
-/* ---------- トレンド ---------- */
+/* ==== トレンド（seed + tokenAddress解決） ==== */
+function parseGeckoTokenId(id){ // 例: "eth_0xabc..." or "ethereum_0xabc..."
+  if(!id)return '';
+  const parts=id.split('_');
+  return parts[parts.length-1]?.toLowerCase()||'';
+}
 async function getTrendingSeeds({limit=20}){
+  // Gecko
   try{
     const j=await getJsonSmart('https://api.geckoterminal.com/api/v2/networks/eth/trending_pools?page=1',{label:'Gecko trending'});
     const arr=(j?.data||[]).slice(0,limit);
-    const pools=arr.map(x=>({poolAddress:x?.attributes?.address,base:x?.relationships?.base_token?.data?.id?.split('_').slice(2).join('_')||'',quote:x?.relationships?.quote_token?.data?.id?.split('_').slice(2).join('_')||'',name:x?.attributes?.name||''})).filter(x=>x.poolAddress);
+    const pools=arr.map(x=>{
+      const poolAddress=x?.attributes?.address;
+      const baseId=x?.relationships?.base_token?.data?.id;
+      const quoteId=x?.relationships?.quote_token?.data?.id;
+      return {
+        poolAddress,
+        baseSymbol:x?.attributes?.base_token_price_usd?x?.attributes?.name?.split('/')[0]:'',
+        tokenAddress:parseGeckoTokenId(baseId),
+        name:x?.attributes?.name||''
+      };
+    }).filter(x=>x.poolAddress);
     if(pools.length){log(`Gecko trending: ${pools.length} seeds`);return {seeds:pools,source:'GeckoTerminal'};}
   }catch(e){log(`Gecko trending failed: ${e.message||e}`,true);}
+  // DexScreener（フォールバック）
   const j2=await getJsonSmart(`https://api.dexscreener.com/latest/dex/trending?limit=${limit}`,{label:'DexScreener trending'});
-  const seeds=(j2?.pairs||[]).filter(p=>p.chainId==='ethereum'||p.chainId==='eth').slice(0,limit).map(p=>({poolAddress:p.pairAddress,base:p.baseToken?.symbol||'',quote:p.quoteToken?.symbol||'',name:p.baseToken?.symbol&&p.quoteToken?.symbol?`${p.baseToken.symbol}/${p.quoteToken.symbol}`:(p.symbol||'')}));
+  const seeds=(j2?.pairs||[]).filter(p=>p.chainId==='ethereum'||p.chainId==='eth').slice(0,limit).map(p=>({
+    poolAddress:p.pairAddress, tokenAddress:(p.baseToken?.address||'').toLowerCase(), name:p.baseToken?.symbol&&p.quoteToken?.symbol?`${p.baseToken.symbol}/${p.quoteToken.symbol}`:(p.symbol||'')
+  }));
   log(`DexScreener trending: ${seeds.length} seeds`);
   return {seeds,source:'DexScreener'};
 }
 
-/* ---------- OHLCV ---------- */
+/* ==== OHLCV ==== */
 async function getDailyOHLCV_eth_pool(addr,{limit=120}={}){
   const wait=Math.max(0,lastGecko+GECKO_MIN_INTERVAL+geckoPenalty-Date.now()); if(wait>0)await sleep(wait+jitter());
   lastGecko=Date.now();
@@ -142,21 +169,18 @@ async function getDailyOHLCV_eth_pool(addr,{limit=120}={}){
       const j=await getJsonSmart(`https://api.geckoterminal.com/api/v2/networks/eth/pools/${addr}/ohlcv/day?aggregate=1&limit=${limit}`,{label:`OHLCV ${addr.slice(0,6)}…`});
       const arr=j?.data?.attributes?.candles||[];
       geckoPenalty=Math.max(0,geckoPenalty-100);
-      // 秒/ミリ秒を正規化して返す
-      return arr.map(x=>{
-        const rawTs=+x[0]; const ts=normTs(rawTs);
-        return {ts, o:+x[1], h:+x[2], l:+x[3], c:+x[4], v:+x[5]};
-      });
+      return arr.map(x=>({ts:normTs(+x[0]),o:+x[1],h:+x[2],l:+x[3],c:+x[4],v:+x[5]}));
     }catch(e){
       const m=String(e.message||e);
       if(m.includes('429')){geckoPenalty=Math.min(3000,geckoPenalty+600); await sleep(1500+a*800); continue;}
+      if(m.includes('abort')||m.includes('timeout')||m.includes('Load failed')){await sleep(1000+a*500); continue;}
       throw e;
     }
   }
   throw new Error('OHLCV: retries exhausted');
 }
 
-/* ---------- スパイク検出（可変ウィンドウ + 高値/安値考慮） ---------- */
+/* ==== スパイク検出（可変ウィンドウ + 高値/安値） ==== */
 function bestSpikeFlexible(ohlc, windowDays, startTs, endTs){
   if(!ohlc?.length) return null;
   const sorted=[...ohlc].sort((a,b)=>a.ts-b.ts);
@@ -182,30 +206,28 @@ function bestSpikeFlexible(ohlc, windowDays, startTs, endTs){
     if(!(peakPrice>0) || !(minPrice>0)) continue;
 
     const mult=peakPrice/minPrice;
-    if(mult>bestMult){
-      bestMult=mult;
-      best={ peak_ts:p.ts, pre_min_ts:minCandle.ts, multiple_14d:mult };
-    }
+    if(mult>bestMult){ bestMult=mult; best={ peak_ts:p.ts, pre_min_ts:minCandle.ts, multiple_14d:mult }; }
   }
   return best;
 }
 
-/* ---------- Ethplorer（TopHolders） ---------- */
+/* ==== Ethplorer（TopHolders） ==== */
 const KNOWN_BURN_ADDRS=new Set(['0x0000000000000000000000000000000000000000','0x000000000000000000000000000000000000dead','0x000000000000000000000000000000000000dEaD']);
 const LOCKER_HINTS=['unicrypt','team','pink','gempad','dxsale','mudra','safelock','bloxlock','trustswap','pinksale','deeplock','cryptex'];
 
-async function getTopHolders_lp(addr,{apiKey='freekey'}={}){
+async function getTopHolders_lp(tokenAddr,{apiKey='freekey'}={}){
+  if(!tokenAddr) throw new Error('token address missing');
   const user=by('cors').value.trim();
   const build=s=> (user?buildProxiedUrl(user,`https://api.ethplorer.io/${s}`):`https://api.ethplorer.io/${s}`);
   for(let k=0;k<6;k++){
     const wait=Math.max(0,lastEth+ETHPLORER_MIN_INTERVAL-Date.now()); if(wait>0)await sleep(wait+jitter());
     lastEth=Date.now();
-    const url=build(`getTopTokenHolders/${addr}?apiKey=${encodeURIComponent(apiKey)}&limit=50`);
-    try{const j=await _fetchJson(url,{label:`TopHolders ${addr.slice(0,6)}…`}); return j?.holders||[];}
+    const url=build(`getTopTokenHolders/${tokenAddr}?apiKey=${encodeURIComponent(apiKey)}&limit=50`);
+    try{const j=await _fetchJson(url,{label:`TopHolders ${tokenAddr.slice(0,6)}…`}); return j?.holders||[];}
     catch(e){
       const m=String(e.message||e);
       if(m.includes('429')){await sleep(2200+k*600); continue;}
-      if(m.includes('400')||m.includes('406')||m.includes('Load failed')||m.includes('timeout')||m.includes('Failed to fetch')){await sleep(1400+k*500); continue;}
+      if(m.includes('400')||m.includes('406')||m.includes('Load failed')||m.includes('timeout')||m.includes('Failed to fetch')||m.includes('abort')){await sleep(1400+k*500); continue;}
       throw e;
     }
   }
@@ -226,7 +248,7 @@ function estimateLP(hs=[]){
   return {lp_pct_est:+(burn+lock).toFixed(2),lp_type:typ,locker_name:locker||'',burn_proof_url:bh?url(bh.address):'',locker_proof_url:lh?url(lh.address):''};
 }
 
-/* ---------- Main ---------- */
+/* ==== Main ==== */
 let LAST_ROWS=[]; let CANCEL=false;
 
 async function run(){
@@ -235,7 +257,7 @@ async function run(){
   setBar(0); by('progress').textContent='preparing…';
 
   const days=+by('days').value||14, mult=+by('mult').value||3, lpmin=+by('lpmin').value||80, seedLimit=+by('seedLimit').value||20;
-  const strict=by('strict').checked, lpRequired=by('lpRequired').checked, lpAfterMult=by('lpAfterMult').checked;
+  const strict=by('strict').checked, lpRequired=by('lpRequired').checked, lpAfterMult=by('lpAfterMult').checked, showAll=by('showAll').checked;
   const ethKey=(by('ethKey')?.value||'freekey').trim();
   const {startTs,endTs}=datePrefToUnix();
 
@@ -246,7 +268,7 @@ async function run(){
   }
 
   by('params').textContent=[
-    `Params: days=${days}, mult=${mult}, LP>=${lpmin}%, lpRequired=${lpRequired}`,
+    `Params: days=${days}, mult=${mult}, LP>=${lpmin}%, lpRequired=${lpRequired}, showAll=${showAll}`,
     `Period: start=${startTs||'-'} (${startTs?new Date(startTs*1000).toLocaleDateString():''}), end=${endTs||'-'} (${endTs?new Date(endTs*1000).toLocaleDateString():''})`
   ].join('\n');
 
@@ -268,10 +290,12 @@ async function run(){
 
       let candles=[];
       try{
-        candles=await getDailyOHLCV_eth_pool(s.poolAddress,{limit:ohlcLimit}); 
+        candles=await getDailyOHLCV_eth_pool(s.poolAddress,{limit:ohlcLimit});
         ohlcvOk++;
         if(candles.length){
           log(`ローソク本数: ${candles.length}｜最古: ${ts2(candles[0].ts)}｜最新: ${ts2(candles[candles.length-1].ts)}`);
+        }else{
+          log('OHLCV: データ0',true);
         }
       }catch(e){log(`OHLCV失敗: ${e.message||e}`,true); ohlcvFail++;}
 
@@ -280,12 +304,16 @@ async function run(){
       if(spike){log(`倍率サマリ: best×${fmt(multV)} at ${ts2(spike.peak_ts)}（min: ${ts2(spike.pre_min_ts)}）`);}
       else{log('倍率サマリ: 有効な上昇なし/データ不足');}
 
+      // LPチェック（tokenAddressで）
       let lpInfo={lp_pct_est:null,lp_type:'unknown',locker_name:'',burn_proof_url:'',locker_proof_url:''};
       let needLP=strict&&lpRequired;
       if(needLP && lpAfterMult && !(multV && multV>=mult)){ needLP=false; tphSkip++; log('TopHolders: skip (mult未達)'); }
       if(needLP){
-        try{const hs=await getTopHolders_lp(s.poolAddress,{apiKey:ethKey}); lpInfo=estimateLP(hs); tphOk++; }
-        catch(e){log(`TopHolders失敗: ${e.message||e}`,true); tphFail++;}
+        try{
+          const token=s.tokenAddress||'';
+          const hs=await getTopHolders_lp(token,{apiKey:ethKey});
+          lpInfo=estimateLP(hs); tphOk++;
+        }catch(e){log(`TopHolders失敗: ${e.message||e}`,true); tphFail++;}
       }
 
       let passes=true, reason=[];
@@ -295,23 +323,23 @@ async function run(){
       }
 
       rows.push({
-        token_pool:s.name||(s.base&&s.quote?`${s.base}/${s.quote}`:''), address:s.poolAddress,
+        token_pool:s.name||'', address:s.poolAddress, token_address:s.tokenAddress||'',
         multiple_14d_close:multV?fmt(multV):'',
         peak_ts:spike?.peak_ts||'', pre14_min_ts:spike?.pre_min_ts||'',
         lp_pct_est:lpInfo.lp_pct_est??'', lp_type:lpInfo.lp_type, locker_name:lpInfo.locker_name||'',
         dex_url:`https://dexscreener.com/ethereum/${s.poolAddress}`,
         gecko_ohlcv_url:`https://api.geckoterminal.com/api/v2/networks/eth/pools/${s.poolAddress}/ohlcv/day?aggregate=1&limit=${ohlcLimit}`,
-        ethplorer_token_url:`https://ethplorer.io/address/${s.poolAddress}`,
+        ethplorer_token_url:s.tokenAddress?`https://ethplorer.io/address/${s.tokenAddress}`:'',
         __passes:passes, __reason:reason.join(',')
       });
 
       done++; setBar(done/seedArr.length);
     }
 
-    render(rows,{strict,lpmin});
+    render(rows,{strict,lpmin,showAll});
     LAST_ROWS=rows;
-    const shown=strict?rows.filter(r=>r.__passes).length:rows.length;
-    by('progress').textContent=`完了: ${shown} hits（total ${rows.length}）`;
+    const shown=(strict&&!showAll)?rows.filter(r=>r.__passes).length:rows.length;
+    by('progress').textContent=`完了: ${shown} rows（total ${rows.length}）`;
     by('csvBtn').disabled=rows.length===0;
     log(`要約: OHLCV 成功 ${ohlcvOk}/失敗 ${ohlcvFail}｜TopHolders 成功 ${tphOk}/失敗 ${tphFail}｜skip ${tphSkip}`);
     log('スキャン完了');
@@ -321,10 +349,10 @@ async function run(){
   }finally{setBar(1); by('cancelBtn').disabled=true;}
 }
 
-function render(rows,{strict,lpmin}){
-  const show=strict?rows.filter(r=>r.__passes):rows;
+function render(rows,{strict,lpmin,showAll}){
+  const show=(strict && !showAll)?rows.filter(r=>r.__passes):rows;
   let h=`<table><thead><tr>
-    <th>#</th><th>Token/Pool</th><th>Address</th>
+    <th>#</th><th>Token/Pool</th><th>Pool</th><th>Token</th>
     <th>multiple(14d)</th><th>peak_ts</th><th>pre14_min_ts</th>
     <th>LP% (est)</th><th>LP type</th><th>locker</th><th>Links</th>
   </tr></thead><tbody>`;
@@ -336,19 +364,20 @@ function render(rows,{strict,lpmin}){
       <td class="num">${i+1}</td>
       <td>${r.token_pool||''}</td>
       <td><a href="${r.dex_url}" target="_blank">${r.address.slice(0,6)}…${r.address.slice(-4)}</a></td>
+      <td>${r.token_address?`<a href="${r.ethplorer_token_url}" target="_blank">${r.token_address.slice(0,6)}…${r.token_address.slice(-4)}</a>`:''}</td>
       <td class="num ${mcls}">${r.multiple_14d_close||''}</td>
       <td class="num">${r.peak_ts?ts2(r.peak_ts):''}</td>
       <td class="num">${r.pre14_min_ts?ts2(r.pre14_min_ts):''}</td>
       <td class="num ${lpcls}">${r.lp_pct_est!==''?fmt(r.lp_pct_est)+'%':''}</td>
       <td>${r.lp_type||''}</td>
       <td>${r.locker_name||''}</td>
-      <td><a href="${r.dex_url}" target="_blank">Dex</a> / <a href="${r.gecko_ohlcv_url}" target="_blank">OHLCV</a> / <a href="${r.ethplorer_token_url}" target="_blank">Ethplorer</a></td>
+      <td><a href="${r.dex_url}" target="_blank">Dex</a> / <a href="${r.gecko_ohlcv_url}" target="_blank">OHLCV</a>${r.ethplorer_token_url?` / <a href="${r.ethplorer_token_url}" target="_blank">Ethplorer</a>`:''}</td>
     </tr>`;
   });
   h+='</tbody></table>'; by('wrapTable').innerHTML=h;
 }
 
-/* ---------- UI ---------- */
+/* ==== UI ==== */
 by('runBtn').addEventListener('click',run);
 by('cancelBtn').addEventListener('click',()=>{CANCEL=true; by('cancelBtn').disabled=true;});
 by('csvBtn').addEventListener('click',()=>{if(!LAST_ROWS.length)return; const name=`meme_trending_eth_${Date.now()}.csv`; const out=LAST_ROWS.map(({__passes,__reason,...rest})=>rest); dl(name,toCSV(out));});
