--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   .good{color:var(--good)} .bad{color:var(--bad)} .warn{color:var(--warn)}
   .bar{height:8px;background:#0a1a38;border:1px solid #1f2b45;border-radius:999px;overflow:hidden}
   .bar>div{height:100%;width:0;background:#2563eb;transition:width .2s}
-  .hint{font-size:12px;color:#9ca3af}
+  .hint{font-size:12px;color:var(--muted)}
 </style>
 </head>
 <body>
@@ -314,7 +314,6 @@ async function getTrendsSeries({kw,geo,startTs,endTs,hl='ja',tz=0}){
   // step1: explore
   const exRaw=await getJsonSmart(trendsExploreReq({kw,geo,time,hl,tz}),{label:`Trends explore ${kw}`}).catch(async e=>{
     // Googleは application/json で返さないので fallback: text → JSON
-    // 失敗時にもう一度 fetch してテキストで parse
     const u=trendsExploreReq({kw,geo,time,hl,tz});
     const h=new URL(u).hostname; const user=by('cors').value.trim();
     const proxies=[user||'','https://cors.isomorphic-git.org/','https://corsproxy.io/?url=','https://api.allorigins.win/raw?url='];
@@ -356,12 +355,25 @@ async function getTrendsSeries({kw,geo,startTs,endTs,hl='ja',tz=0}){
 }
 function seriesToMapDaily(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.v); } return m;}
 function ohlcToMapClose(arr){const m=new Map(); for(const x of arr){ const d=new Date(x.ts*1000); const k=`${d.getUTCFullYear()}-${String(d.getUTCMonth()+1).padStart(2,'0')}-${String(d.getUTCDate()).padStart(2,'0')}`; m.set(k,+x.c); } return m;}
-function toReturns(vals){const out=[]; for(let i=1;i<vals.length;i++){ const a=vals[i-1], b=vals[i]; if(a>0 && b>0){ out.push((b/a-1)*100); } } return out;}
+
+/* 既存: 数値配列の%リターン（参考用） */
+function toReturns(vals){const out=[]; for(let i=1;i<vals.length;i++){ const a=vals[i-1], b=vals[i]; if(a>0 && b>0){ out.push((b/a-1)*100); } } return out; }
+
+/* 追加: “NaNを保持”して日付整列を壊さない%リターン系列（runCorrelationで使用） */
+function toReturnsSeries(vals){
+  const out=[];
+  for(let i=1;i<vals.length;i++){
+    const a=vals[i-1], b=vals[i];
+    out.push(Number.isFinite(a)&&Number.isFinite(b)&&a>0&&b>0 ? (b/a-1)*100 : NaN);
+  }
+  return out;
+}
+
 function alignAndLag(xArr,yArr,lag){ // lag>0: y を未来へ（トレンドが先行）
   const n=Math.min(xArr.length, yArr.length);
   const xs=[], ys=[];
   if(lag===0){
-    for(let i=0;i<n;i++){ if(Number.isFinite(xArr[i])&&Number.isFinite(yArr[i])){ xs.push(xArr[i]); ys.push(yArr[i]); } }
+    for(let i=0;i<n;i++){ const xi=xArr[i], yi=yArr[i]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi); } }
   }else if(lag>0){
     for(let i=lag;i<n;i++){ const xi=xArr[i], yi=yArr[i-lag]; if(Number.isFinite(xi)&&Number.isFinite(yi)){ xs.push(xi); ys.push(yi);} }
   }else{
@@ -448,7 +460,6 @@ async function run(){
         if(lpRequired && !(lpInfo.lp_pct_est!=null && lpInfo.lp_pct_est>=lpmin)){ passes=false; reason.push('lp'); }
       }
 
-      // デフォルトのキーワード（ベースシンボル。曖昧回避で "SYMBOL crypto" も付与）
       const baseSym = (s.baseSymbol || (s.name||'').split('/')[0] || '').trim();
       const trendKw = baseSym ? `${baseSym} crypto` : '';
 
@@ -507,15 +518,13 @@ async function runCorrelation(){
       for(let i=1;i<px.length;i++){ if(!Number.isFinite(px[i])&&Number.isFinite(px[i-1])) px[i]=px[i-1]; }
       for(let i=1;i<tv.length;i++){ if(!Number.isFinite(tv[i])&&Number.isFinite(tv[i-1])) tv[i]=tv[i-1]; }
 
-      // 変換
+      // === ここを最小修正 ===
       if(mode==='ret'){
-        const pxr=toReturns(px.filter(x=>Number.isFinite(x)));
-        const tvr=toReturns(tv.filter(x=>Number.isFinite(x)));
-        px=pxr; tv=tvr;
-      }else{
-        px=px.filter(x=>Number.isFinite(x));
-        tv=tv.filter(x=>Number.isFinite(x));
+        // 配列長を保ったまま日次リターン系列へ（NaNは保持→後段で除外）
+        px = toReturnsSeries(px);
+        tv = toReturnsSeries(tv);
       }
+      // フィルタ（.filter）で長さを変えない。ペア選別は alignAndLag で実施
 
       // ラグ探索
       let bestR=null, bestLag=0, r0=null;
@@ -556,7 +565,7 @@ function render(rows,{strict,lpmin,showAll}){
     const m=+r.multiple_14d_close||0;
     const mcls=m>=3?'good':(m>=2?'warn':'');
     const lpcls=(r.lp_pct_est>=lpmin)?'good':(r.lp_pct_est>=50?'warn':'bad');
-    h+=`<tr>
+    h+=`<tr class="token" data-symbol="${(r.base_symbol||'').toLowerCase()}">
       <td class="num">${i+1}</td>
       <td>${r.token_pool||''}</td>
       <td><a href="${r.dex_url}" target="_blank">${r.address.slice(0,6)}…${r.address.slice(-4)}</a></td>
@@ -568,7 +577,7 @@ function render(rows,{strict,lpmin,showAll}){
       <td>${r.lp_type||''}</td>
       <td>${r.locker_name||''}</td>
       <td>${r.trend_kw||''}</td>
-      <td class="num">${r.tr_r_max||''}</td>
+      <td class="num corr">${r.tr_r_max||''}</td>
       <td class="num">${r.tr_lag_best||''}</td>
       <td class="num">${r.tr_r0||''}</td>
       <td>
